--- a/2-services_descriptions.html
+++ b/2-services_descriptions.html
@@ -27,12 +27,7 @@
   </head>
   <body>
     <header
-      class="
-        navbar navbar-expand-lg navbar-dark
-        bg-transparent
-        fixed-top
-        link-white
-      "
+      class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top link-white"
     >
       <div class="container-fluid">
         <!-- Logo -->
@@ -67,7 +62,9 @@
           <div class="offcanvas-body justify-content-lg-center">
             <ul class="navbar-nav">
               <li class="nav-item mx-lg-3">
-                <a href="1-city_description.html" class="nav-link">Descrizione</a>
+                <a href="1-city_description.html" class="nav-link"
+                  >Descrizione</a
+                >
               </li>
               <li class="nav-item mx-lg-3">
                 <a href="5-free_page.html" class="nav-link">Storia</a>
@@ -81,7 +78,9 @@
                 >
                 <ul class="dropdown-menu px-3">
                   <li>
-                    <a href="2-services_descriptions.html" class="dropdown-item active"
+                    <a
+                      href="2-services_descriptions.html"
+                      class="dropdown-item active"
                       >Generale</a
                     >
                   </li>
@@ -92,7 +91,9 @@
                     >
                   </li>
                   <li>
-                    <a href="2_1-service_description.html" class="dropdown-item">Benessere</a>
+                    <a href="2_1-service_description.html" class="dropdown-item"
+                      >Benessere</a
+                    >
                   </li>
                 </ul>
               </li>
@@ -142,7 +143,9 @@
                   dei nostri farmaci all’avanguardia
                 </p>
               </div>
-              <a href="2_1-service_description.html" class="small-caps link-secondary"
+              <a
+                href="2_1-service_description.html"
+                class="small-caps link-secondary"
                 >Scopri i nostri pacchetti
                 <i class="bi-arrow-right fw-bold"></i>
               </a>
@@ -165,7 +168,9 @@
                   sbaglierai percorso mai più nella vita.
                 </p>
               </div>
-              <a href="2_2-service-description.html" class="small-caps link-secondary"
+              <a
+                href="2_2-service-description.html"
+                class="small-caps link-secondary"
                 >Scopri le nostre scuole
                 <i class="bi-arrow-right fw-bold"></i>
               </a>
@@ -181,7 +186,7 @@
             <div class="col-sm text-center">
               <img
                 class="img-fluid"
-                src="img/icona_servizi1.png"
+                src="img/icon_servizi1.png"
                 alt="icona pulizia dell'aria"
               />
               <p>Pulizia dell'aria</p>
@@ -189,7 +194,7 @@
             <div class="col-sm text-center">
               <img
                 class="img-fluid"
-                src="img/icona_servizi2.png"
+                src="img/icon_servizi2.png"
                 alt="icona acqua potabile"
               />
               <p>Acqua potabile</p>
@@ -197,7 +202,7 @@
             <div class="col-sm text-center">
               <img
                 class="img-fluid"
-                src="img/icona_servizi3.png"
+                src="img/icon_servizi3.png"
                 alt="icona guardie della disciplina"
               />
               <p>Guardie della disciplina</p>
@@ -205,7 +210,7 @@
             <div class="col-sm text-center">
               <img
                 class="img-fluid"
-                src="img/icona_servizi4.png"
+                src="img/icon_servizi4.png"
                 alt="icona paesaggi naturali"
               />
               <p>Paesaggi naturali</p>
@@ -213,7 +218,7 @@
             <div class="col-sm text-center">
               <img
                 class="img-fluid"
-                src="img/icona_servizi5.png"
+                src="img/icon_servizi5.png"
                 alt="icona cura della prole"
               />
               <p>Cura della prole</p>
@@ -230,13 +235,7 @@
       </div>
       <!-- Links -->
       <nav
-        class="
-          nav
-          flex-column flex-md-row
-          align-items-center
-          justify-content-md-center
-          border-bottom border-primary
-        "
+        class="nav flex-column flex-md-row align-items-center justify-content-md-center border-bottom border-primary"
       >
         <a class="nav-link" href="0-home.html">Home</a>
         <a class="nav-link" href="1-city_description.html">Descrizione</a>
