--- a/2_1-service_description.html
+++ b/2_1-service_description.html
@@ -26,12 +26,7 @@
   </head>
   <body>
     <header
-      class="
-        navbar navbar-expand-lg navbar-dark
-        bg-transparent
-        fixed-top
-        link-white
-      "
+      class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top link-white"
     >
       <div class="container-fluid">
         <!-- Logo -->
@@ -66,7 +61,9 @@
           <div class="offcanvas-body justify-content-lg-center">
             <ul class="navbar-nav">
               <li class="nav-item mx-lg-3">
-                <a href="1-city_description.html" class="nav-link">Descrizione</a>
+                <a href="1-city_description.html" class="nav-link"
+                  >Descrizione</a
+                >
               </li>
               <li class="nav-item mx-lg-3">
                 <a href="5-free_page.html" class="nav-link">Storia</a>
@@ -80,7 +77,9 @@
                 >
                 <ul class="dropdown-menu px-3">
                   <li>
-                    <a href="2-services_descriptions.html" class="dropdown-item">Generale</a>
+                    <a href="2-services_descriptions.html" class="dropdown-item"
+                      >Generale</a
+                    >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
@@ -89,7 +88,9 @@
                     >
                   </li>
                   <li>
-                    <a href="2_1-service_description.html" class="dropdown-item active"
+                    <a
+                      href="2_1-service_description.html"
+                      class="dropdown-item active"
                       >Benessere</a
                     >
                   </li>
@@ -124,20 +125,13 @@
       <section class="bg-primary py-5">
         <div class="container py-5">
           <div
-            class="
-              row
-              flex-md-row-reverse
-              gy-5 gy-md-0
-              gx-md-5
-              align-items-center
-              justify-content-between
-            "
+            class="row flex-md-row-reverse gy-5 gy-md-0 gx-md-5 align-items-center justify-content-between"
           >
             <div class="col-md">
               <img
                 class="img-fluid"
-                src="img/Accesso_Benessere.jpg"
-                alt="immagine accesso al servizio"
+                src="img/access_benessere.jpg"
+                alt="immagine accesso al servizio benessere"
               />
             </div>
             <div class="col-md">
@@ -161,10 +155,10 @@
           <div class="mb-5">
             <h2 class="text-center">I trattamenti</h2>
             <p class="lead text-center">
-              Le terapie vengono somministrate sotto forma di pacchetti a seconda
-              se il tuo problema è risolvibile con un trattamento benessere o
-              necessita l’intervento della nostro avveniristico settore
-              farmacologico.
+              Le terapie vengono somministrate sotto forma di pacchetti a
+              seconda se il tuo problema è risolvibile con un trattamento
+              benessere o necessita l’intervento della nostro avveniristico
+              settore farmacologico.
             </p>
           </div>
 
@@ -250,13 +244,7 @@
       </div>
       <!-- Links -->
       <nav
-        class="
-          nav
-          flex-column flex-md-row
-          align-items-center
-          justify-content-md-center
-          border-bottom border-primary
-        "
+        class="nav flex-column flex-md-row align-items-center justify-content-md-center border-bottom border-primary"
       >
         <a class="nav-link" href="0-home.html">Home</a>
         <a class="nav-link" href="1-city_description.html">Descrizione</a>
