--- a/4-free_page.html
+++ b/4-free_page.html
@@ -27,12 +27,7 @@
   </head>
   <body>
     <header
-      class="
-        navbar navbar-expand-lg navbar-dark
-        bg-transparent
-        fixed-top
-        link-white
-      "
+      class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top link-white"
     >
       <div class="container-fluid">
         <!-- Logo -->
@@ -67,7 +62,9 @@
           <div class="offcanvas-body justify-content-lg-center">
             <ul class="navbar-nav">
               <li class="nav-item mx-lg-3">
-                <a href="1-city_description.html" class="nav-link">Descrizione</a>
+                <a href="1-city_description.html" class="nav-link"
+                  >Descrizione</a
+                >
               </li>
               <li class="nav-item mx-lg-3">
                 <a href="5-free_page.html" class="nav-link">Storia</a>
@@ -81,7 +78,9 @@
                 >
                 <ul class="dropdown-menu px-3">
                   <li>
-                    <a href="2-services_descriptions.html" class="dropdown-item">Generale</a>
+                    <a href="2-services_descriptions.html" class="dropdown-item"
+                      >Generale</a
+                    >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
@@ -90,7 +89,9 @@
                     >
                   </li>
                   <li>
-                    <a href="2_1-service_description.html" class="dropdown-item">Benessere</a>
+                    <a href="2_1-service_description.html" class="dropdown-item"
+                      >Benessere</a
+                    >
                   </li>
                 </ul>
               </li>
@@ -127,7 +128,7 @@
               <div class="card text-light h-100">
                 <div class="position-relative">
                   <img
-                    src="img/eventi1.jpg"
+                    src="img/event1.jpg"
                     alt="immagine evento sorgente di vita"
                     class="card-img"
                   />
@@ -163,7 +164,7 @@
               <div class="card text-light h-100">
                 <div class="position-relative">
                   <img
-                    src="img/eventi2.jpg"
+                    src="img/event2.jpg"
                     alt="immagine evento cinema d'autore"
                     class="card-img"
                   />
@@ -199,7 +200,7 @@
               <div class="card text-light h-100">
                 <div class="position-relative">
                   <img
-                    src="img/eventi3.jpg"
+                    src="img/event3.jpg"
                     alt="immagine evento preghiamo insieme"
                     class="card-img"
                   />
@@ -237,7 +238,7 @@
               <div class="card text-light h-100">
                 <div class="position-relative">
                   <img
-                    src="img/eventi4.jpg"
+                    src="img/event4.jpg"
                     alt="immagine evento conferenze sulla fertilità"
                     class="card-img"
                   />
@@ -310,13 +311,7 @@
       </div>
       <!-- Links -->
       <nav
-        class="
-          nav
-          flex-column flex-md-row
-          align-items-center
-          justify-content-md-center
-          border-bottom border-primary
-        "
+        class="nav flex-column flex-md-row align-items-center justify-content-md-center border-bottom border-primary"
       >
         <a class="nav-link" href="0-home.html">Home</a>
         <a class="nav-link" href="1-city_description.html">Descrizione</a>
